--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Keling Zheng"
 title_separator          : "-"
 name                     : &name "Keling Zheng"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+description              : &description "Keling Zheng's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://Keling-Zheng.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Keling-Zheng/Keling-Zheng.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "profile_kz.jpg"
   name             : "Keling Zheng"
-  pronouns         : # example: "she/her"  
+  pronouns         : 
   bio              : "Assistant Professor of Finance"
   location         : "Hong Kong"
   employer         : 
