--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,12 @@ author:
   pronouns         : 
   bio              : "Assistant Professor of Finance"
   location         : "Hong Kong"
-  employer         : 
-  uri              : 
+  employer         : "CUHK Business School"
+  uri              : "https://www.bschool.cuhk.edu.hk/staff/zheng-keling/"
   email            : "keling.zheng@cuhk.edu.hk" 
 
   # Academic websites
-  academia         : "https://www.bschool.cuhk.edu.hk/staff/zheng-keling/"
+  academia         : 
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=2_-RyjwAAAAJ&hl=en"
   inspire-hep      : # URL
